enable update checks in SMAPI 2.0

--- a/Main/manifest.json
+++ b/Main/manifest.json
@@ -9,5 +9,6 @@
   },
   "Description": "Makes your character run faster",
   "UniqueID": "KathrynHazuka.FasterRun",
-  "EntryDll": "FasterRun.dll"
+  "EntryDll": "FasterRun.dll",
+  "UpdateKeys": [ "Nexus:733" ]
 }
